--- a/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
@@ -67,7 +67,7 @@
                         <img class="photo tall-profile-image" src="{{ image_url }}"/>
                     {% endif%}
                 {% else %}
-                    <img class="photo equal" src="{{ asset('pp/index.png') }}"/>
+                    <div class="profile_image pp-unavailable"></div>
                 {% endif%}
                 </a>
             </div>                 
