SEO, title descption favicon.ico, removal of unecessary files

--- a/src/Members/Bundle/ManagementBundle/Resources/views/Index/index.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Index/index.html.twig
@@ -1,5 +1,8 @@
 {% extends '::base.html.twig' %}
 
+
+{% block title %}Jem3a: Marché aux puces de Kenitra - Kenitra flea market - جوطية القنيطرة{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/homepage_styles.css') }}" />
 {% endblock %}
