--- a/src/Shop/Bundle/ManagementBundle/Resources/views/Post/show.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/Post/show.html.twig
@@ -1,8 +1,6 @@
     <div id="post-title-price-description">
         <div class="post-title-and-price" id="post-title-price-date">
-            <div id="post-title">
-                <h1 class="h1" itemprop="name">{{ entity.postTitle }}</h1>
-            </div>
+            <div id="post-title">{{ entity.postTitle }}</div>
             <div id="post-price-and-date">
                 <div id="post-price">
                     <span id="p-price">{{ entity.postPrice }}</span>
