--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,38 +4,44 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+
         <title>{% block title %}Welcome!{% endblock %}</title>
+
+        {% block description %}{% endblock %}
+
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        {% block myscript %}
 
-        {#
-        <script type="text/javascript" id= "mscript" data-url="{{ path('mobile')}}" >
-            /* The mobile designis for :
-             * 1. device can rotate
-             * 2. device width < device height
-             * 3. device dith < 500 // not yet implemented in following if
-             **/  
-            if( ('onorientationchange' in window) || (window.screen.width< window.screen.height)) { 
-                var url = document.getElementById('mscript').getAttribute('data-url');
-                window.location.replace(url);
-            }
-
-
-        </script>
-        #}
-        {% endblock %}
+        {% block myscript %}{% endblock %}
 
         {% block noindex %}{% endblock %}
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-        
-    
+
+        {% set faviconBaseUrl = 'images/favicon/' %}
+        <link rel="icon" type="image/x-icon" href="{{ asset(faviconBaseUrl ~ 'favicon.ico') }}" />
+        <link rel="apple-touch-icon" sizes="57x57" href="{{ asset(faviconBaseUrl ~ 'apple-icon-57x57.png') }}">
+        <link rel="apple-touch-icon" sizes="60x60" href="{{ asset(faviconBaseUrl ~ 'apple-icon-60x60.png') }}">
+        <link rel="apple-touch-icon" sizes="72x72" href="{{ asset(faviconBaseUrl ~ 'apple-icon-72x72.png') }}">
+        <link rel="apple-touch-icon" sizes="76x76" href="{{ asset(faviconBaseUrl ~ 'apple-icon-76x76.png') }}">
+        <link rel="apple-touch-icon" sizes="114x114" href="{{ asset(faviconBaseUrl ~ 'apple-icon-114x114.png') }}">
+        <link rel="apple-touch-icon" sizes="120x120" href="{{ asset(faviconBaseUrl ~ 'apple-icon-120x120.png') }}">
+        <link rel="apple-touch-icon" sizes="144x144" href="{{ asset(faviconBaseUrl ~ 'apple-icon-144x144.png') }}">
+        <link rel="apple-touch-icon" sizes="152x152" href="{{ asset(faviconBaseUrl ~ 'apple-icon-152x152.png') }}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ asset(faviconBaseUrl ~ 'apple-icon-180x180.png') }}">
+        <link rel="icon" type="image/png" sizes="192x192"  href="{{ asset(faviconBaseUrl ~ 'android-icon-192x192.png') }}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ asset(faviconBaseUrl ~ 'favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="96x96" href="{{ asset(faviconBaseUrl ~ 'favicon-96x96.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ asset(faviconBaseUrl ~ 'favicon-16x16.png') }}">
+        <link rel="manifest" href="{{ asset(faviconBaseUrl ~ 'manifest.json') }}">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="{{ asset(faviconBaseUrl ~ 'ms-icon-144x144.png') }}">
+        <meta name="theme-color" content="#ffffff">
+
     </head>
     <body>
         {% block body %}{% endblock %}
