--- a/src/Members/Bundle/ManagementBundle/Resources/views/Index/index.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Index/index.html.twig
@@ -3,6 +3,10 @@
 
 {% block title %}Jem3a: Marché aux puces de Kenitra - Kenitra flea market - جوطية القنيطرة{% endblock %}
 
+{% block description %}
+    <meta name="description" content="Besoin d'un article d'occasion dans la région de Kenitra? Jem3a est un marché aux puces électronique libre de publicité et à e-commerçants vérifiés.">
+{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/homepage_styles.css') }}" />
 {% endblock %}
