--- a/src/Members/Bundle/ManagementBundle/Resources/views/Index/index.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Index/index.html.twig
@@ -4,7 +4,7 @@
 {% block title %}Jem3a: Marché aux puces de Kenitra - Kenitra flea market - جوطية القنيطرة{% endblock %}
 
 {% block description %}
-    <meta name="description" content="Besoin d'un article d'occasion dans la région de Kenitra? Jem3a est un marché aux puces électronique libre de publicité et à e-commerçants vérifiés.">
+    <meta name="description" content="Besoin d'acheter un produit d'occasion dans la région de Kenitra? Jem3a est un marché aux puces électronique à e-commerçants vérifiés et plein de categories: salles a manger, chambre a coucher...">
 {% endblock %}
 
 {% block stylesheets %}
@@ -26,6 +26,10 @@
 
 {% block noindex %}
     <meta name="robots" content="noindex">
+{% endblock %}
+
+{% block canonical %}
+    <link rel="canonical" href="http://www.jem3a.com/m/0" />
 {% endblock %}
 
 {% block body %}
