trying to test fancy SEO

--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/index.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/index.html.twig
@@ -25,12 +25,9 @@
     </script>
 {% endblock %}
 
-{% block noindex %}
-    <meta name="robots" content="noindex">
-{% endblock %}
 
 {% block canonical %}
-    <link rel="canonical" href="http://www.jem3a.com/m/0" />
+    <link rel="canonical" href="http://www.jem3a.com/" />
 {% endblock %}
 
 
